--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.0",
     "express-jwt": "^5.3.1",
     "http-errors": "~1.6.2",
+    "jwks-rsa": "^1.3.0",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11"
   }
